[package]
name = "blend"
version = "0.2.0"
edition = "2024"
authors = ["kafuuchino"]

[dependencies]
clap = { version = "4", features = ["derive"] }
walkdir = "2"
globset = "0.4"
console = "0.15"

# Nickel DSL
nickel-lang = { git = "https://github.com/tweag/nickel", tag = "1.16.0" }
nickel-lang-parser = { git = "https://github.com/tweag/nickel", tag = "1.16.0" }
codespan = "0.11"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
indexmap = { version = "2", features = ["serde"] }
json-strip-comments = "3"

# Diff
similar = "2"
regex = "1"

# System info
hostname = "0.4"

# Parallelism
rayon = "1"

# Tree-sitter (CST structural parsing)
tree-sitter = "0.25"
tree-sitter-nickel = "0.5"

# Error handling
thiserror = "2"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
rexpect = "0.6"
