[package]
name = "blend"
version = "0.2.8"
edition = "2024"
authors = ["kafuuchino"]
repository = "https://github.com/frantic1048/Vanilla"

[dependencies]
clap = { version = "4", features = ["derive"] }
walkdir = "2"
globset = "0.4"
console = "0.15"

# Nickel DSL
nickel-lang = "=2.1.0"
nickel-lang-core = { version = "=0.17.0", default-features = false, features = ["format"] }
nickel-lang-parser = "=0.2.0"
codespan = "0.11"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
indexmap = { version = "2", features = ["serde"] }
json-strip-comments = "3"

# Diff
similar = "2"
regex = "1"

# System info
hostname = "0.4"
libc = "0.2"

# Parallelism
rayon = "1"

# Tree-sitter (CST structural parsing)
tree-sitter = "0.26"
tree-sitter-nickel = "0.5"

# Error handling
thiserror = "2"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
rexpect = "0.6"
